--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/dilanka.jpg);
+    background-image: url(images/bg.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -79,7 +79,7 @@ nav ul li a:hover::after{
     color: #ff004f;
 }
 
-/* -------------------about-------------------- */
+/* ------------------------------about----------------------------- */
 
 #about{
     padding: 80px 0;
@@ -158,7 +158,7 @@ nav ul li a:hover::after{
     display: block;
 }
 
-/* ------------------------Services-------------------------- */
+/* ------------------------------Services--------------------------- */
 #services{
     padding: 30px 0;
 }
@@ -290,7 +290,7 @@ nav ul li a:hover::after{
     background: #ff004f;
 }
 
-/* ---------------------------Contact------------------------------- */
+/* ---------------------------Contact---------------------------- */
 .contact-left{
     flex-basis: 35%;
 }
