--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #0099ff;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -76,7 +76,7 @@ nav ul li a:hover::after{
 }
 
 .header-text h1 span{
-    color: #ff004f;
+    color: #0099ff;
 }
 
 /* ------------------------------about----------------------------- */
@@ -128,7 +128,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #0099ff;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -146,7 +146,7 @@ nav ul li a:hover::after{
 }
 
 .tab-contents ul li span{
-    color: #008cff;
+    color: #0099ff;
     font-size: 14px;
 }
 
@@ -199,7 +199,7 @@ nav ul li a:hover::after{
 }
 
 .services-list div:hover{
-    background: #ff004f;
+    background: #0099ff;
     transform: translateY(-10px);
 }
 
@@ -232,7 +232,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+    background: linear-gradient(rgba(0,0,0,0.6), #0099ff);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -255,7 +255,7 @@ nav ul li a:hover::after{
 
 .layer a{
     margin-top: 20px;
-    color: #ff004f;
+    color: #0099ff;
     text-decoration: none;
     font-size: 18px;
     line-height: 50px;
@@ -277,7 +277,7 @@ nav ul li a:hover::after{
     display: block;
     margin: 50px auto;
     /* width: fit-content; */
-    border: 1px solid #ff004f;
+    border: 1px solid #0099ff;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
@@ -287,7 +287,7 @@ nav ul li a:hover::after{
 }
 
 .btn:hover{
-    background: #ff004f;
+    background: #0099ff;
 }
 
 /* ---------------------------Contact---------------------------- */
@@ -329,7 +329,7 @@ nav ul li a:hover::after{
 
 .btn.btn2{
     display: inline-block;
-    background: #ff004f;
+    background: #0099ff;
 }
 
 form input, form textarea{
@@ -388,7 +388,7 @@ nav .icon{
         font-size: 25px;
     }
     nav ul{
-        background-color: #ff004f;
+        background-color: #003561;
         position: fixed;
         top: 0;
         right: -200px;
