--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ nav ul li a:hover::after{
 }
 
 .header-text h1 span{
-    color: #0099ff;
+    color: #D4AF37;
 }
 
 /* ------------------------------about----------------------------- */
