--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ nav ul li a:hover::after{
     transform: translateY(-10px);
 }
 
-/* -----------------------portfolio---------------------------- */
+/* -----------------------My Work---------------------------- */
 
 #portfolio{
     padding: 50px 0;
@@ -232,7 +232,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6), #0099ff);
+    background: linear-gradient(rgba(0,0,0,0.6), #d80000);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -255,11 +255,11 @@ nav ul li a:hover::after{
 
 .layer a{
     margin-top: 20px;
-    color: #0099ff;
+    /* color: #198ad4; */
     text-decoration: none;
     font-size: 18px;
     line-height: 50px;
-    background: #ffffff;
+    background: #fff;
     width: 50px;
     height: 50px;
     border-radius: 10%;
@@ -286,9 +286,14 @@ nav ul li a:hover::after{
     text-align: center;
 }
 
-.btn:hover{
-    background: #0099ff;
+.btn1{
+    border: 1px solid #d80000;
 }
+
+.btn1:hover{
+    background: #d80000;
+}
+
 
 /* ---------------------------Contact---------------------------- */
 .contact-left{
