--- a/style.css
+++ b/style.css
@@ -447,23 +447,6 @@ nav .icon{
 
 /* ---------------------------------------------------------------------- */
 
-
-/* *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace;
-} */
-
-/* body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    padding: 0 35px;
-    background: linear-gradient(to left top, #031A9A, #8B53FF);
-} */
-
 .wrapper{
     max-width: 1100px;
     width: 100%;
@@ -550,22 +533,23 @@ nav .icon{
     flex-direction: column;
 }
 
-.card .img{
-    background: #8B53FF;
+/* .card .img{
+    background: #3c91ff;
     width: 148px;
     height: 148px;
-    border-radius: 50%;
-}
+    border-radius: 25px;
+} */
 
-.card .img img{
+/* .card .img img{
     width: 140px;
     height: 140px;
     object-fit: cover;
     border-radius: 50%;
     border: 4px solid #fff;
-}
+} */
 
 .card h2{
+    color: #000000;
     font-weight: 500;
     font-size: 1.56rem;
     margin: 30px 0 5px;
@@ -573,10 +557,12 @@ nav .icon{
 
 .card span{
     color: #6a6d78;
-    font-size: 1.31rem;
+    font-size: 1rem;
+
+    padding: 30px;
 }
 
-/* @media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) {
     .wrapper .carousel{
         grid-auto-columns: calc((100% / 2) - 9px);
     }
@@ -586,4 +572,4 @@ nav .icon{
     .wrapper .carousel{
         grid-auto-columns: 100%;
     }
-} */
+}
