--- a/style.css
+++ b/style.css
@@ -445,10 +445,10 @@ nav .icon{
 
 
 
-/* ---------------------------------------------------------------------- */
+/* ---------------------------------------------------------------------------------------------- */
 
 .wrapper{
-    max-width: 1100px;
+    max-width: 1000px;
     width: 100%;
     position: relative;
 
@@ -566,10 +566,17 @@ nav .icon{
     .wrapper .carousel{
         grid-auto-columns: calc((100% / 2) - 9px);
     }
+
+    .wrapper{
+        max-width: 600px;
+    }
 }
 
 @media screen and (max-width: 600px) {
     .wrapper .carousel{
         grid-auto-columns: 100%;
+    }
+    .wrapper{
+        max-width: 400px;
     }
 }
